@@ -3,7 +3,7 @@
 {% if buttons %}
     <span class="buttons">
         {% for button in buttons %}
-            <a href="{{ button.0 }}" class="button button-small button-secondary"{% if button.2 %} target="_blank"{% endif %}>{{ button.1 }}</a>
+            <a href="{{ button.0 }}" class="button button-small button-secondary"{% if button.2 %} target="_blank" rel="noopener noreferrer"{% endif %}>{{ button.1 }}</a>
         {% endfor %}
     </span>
 {% endif %}
